cluster/infrastructure/monitoring/opentelementry-collector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: otel.home.com   # DNS or /etc/hosts entry to your ingress controller
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-collector-collector
                port:
                  number: 4317
